latex functionality moved to his own module.

--- a/HelperScripts/examplefiles/latexHeaders.tex
+++ b/HelperScripts/examplefiles/latexHeaders.tex
@@ -1,4 +1,4 @@
-\documentclass{beamer}
+\documentclass[8pt]{beamer}
 
 \usepackage[utf8]{inputenc}
 \usefonttheme{professionalfonts}
@@ -7,14 +7,14 @@
 
 \newcommand{\drawFit}[2]{
 	\begin{frame}
-		\frametitle{Fit #2}
+		\frametitle{#2}
 		\includegraphics[scale=0.45]{../fit#1/fit#1.pdf}
 	\end{frame}
 }
 
 \newcommand{\drawFitLog}[2]{
 	\begin{frame}
-		\frametitle{Fit #2}
+		\frametitle{#2}
 		\includegraphics[scale=0.45]{../fit#1/fit#1_log.pdf}
 	\end{frame}
 }
@@ -25,5 +25,3 @@
 		\includegraphics[scale=0.40]{#1}
 	\end{frame}
 }
-
-\begin{document}
